<resources>
    <string name="app_name">Minhas Tarefas</string>
    <string name="registro_com_google">Registro com Google</string>
    <string name="login_com_google">Google Login</string>
    <string name="title_tela_login">Tela Login</string>
    <string name="todos_os_campos_devem_ser_preenchidos">Todos os campos devem ser preenchidos.</string>
    <string name="sem_senha">Sem senha</string>
    <string name="senha_muito_fraca">Muito Fraca</string>
    <string name="senha_fraca">Fraca</string>
    <string name="senha_media">Média</string>
    <string name="senha_forte">Forte</string>
    <string name="senha_muito_forte">Muito Forte</string>
    <string name="titulo_task_field">Título</string>
    <string name="descricao_task_field">Descrição</string>
    <string name="btn_select_date">Data</string>
    <string name="btn_select_hour">Hora</string>
    <string name="save_task">Salvar</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="atualizar_perfil">Atualizar Perfil</string>
    <string name="btn_alterar_senha">Alterar senha</string>
    <string name="registrar">Register</string>
    <string name="or">ou</string>
    <string name="entrar">Entrar</string>
    <string name="deletar">Deletar</string>
    <string name="esqueci_minha_senha">Esqueci Minha Senha</string>
    <string name="lista_de_tarefas">Lista de Tarefas</string>





</resources>