<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:chainUseRtl="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_tela_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

<!--    <EditText-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:hint="E-mail*"-->
<!--        android:id="@+id/etEmail"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintBottom_toTopOf="@id/etPassword"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_chainStyle="packed"/>-->

    <fragment
        android:id="@+id/etEmail"
        android:name="dev.brunomborges.projectkotlin.fragments.InputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Senha*"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:padding="10dp"
    />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        app:backgroundTint="#FF9800"
    />


    <TextView
        android:id="@+id/textEsqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_minha_senha"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/btnEnter"
    />

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="ou"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--    />-->

    <Button
        android:id="@+id/registerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registrar"
        android:backgroundTint="#4CAF50"
    />

<!--    <TextView-->
<!--        android:id="@+id/textView4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="ou"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--    />-->

    <Button
        android:id="@+id/Signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_com_google"
        android:backgroundTint="@color/red"
    />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/fragment_container_msg_chuck_norris"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints"
        />


</LinearLayout>